compiler/tools/fpp-check/test/enum/undef_constant_2.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum/undef_constant_2.fpp: 2.16
constant a = E.X
               ^
error: undefined symbol X
